--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+flickr.apiKey=754e603cdced296ba39f96b444b77123
+flickr.apiSecret=8be43af6e5afc277
