--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 flickr.apiKey=754e603cdced296ba39f96b444b77123
 flickr.apiSecret=8be43af6e5afc277
+flickr.appKey=72157720889155241-439f1c0af25677fd
+flickr.appSecret=b9d2d003ad7bfa2b
